<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    >

    <TextView
        android:id="@+id/textView10"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/main_background"
        android:text="@string/Heading"
        android:gravity="center"
        android:textColor="@color/main_text" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="12dp"
        app:srcCompat="@mipmap/first_launcher"
        android:background="@drawable/img"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="95dp"
        android:background="@color/grey"
        android:gravity="center"
        android:text="@string/Home"
        android:textColor="@color/figma_screen"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignTop="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="3dp"
        android:tint="@color/figma_screen"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/imageView32"
        android:layout_alignBottom="@+id/textView14"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="-1dp"
        android:tint="@color/grey"
        app:srcCompat="@drawable/category" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-93dp"
        android:layout_marginTop="156dp"
        android:layout_toEndOf="@+id/imageView31"
        android:gravity="center"
        android:text="@string/Category"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/imageView32"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="213dp"
        android:tint="@color/grey"
        app:srcCompat="@drawable/heart" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/imageView34"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-4dp"
        android:gravity="center_horizontal"
        android:text="@string/Favourite"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_below="@+id/imageView34"
        android:layout_alignEnd="@+id/imageView32"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="0dp"
        android:tint="@color/grey"
        app:srcCompat="@drawable/bookmark" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="221dp"
        android:gravity="center_horizontal"
        android:text="@string/My_Order"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/imageView32"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="186dp"
        android:tint="@color/grey"
        app:srcCompat="@drawable/setting" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="181dp"
        android:gravity="center_horizontal"
        android:text="@string/Settings"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/imageView32"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="141dp"
        android:tint="@color/grey"
        app:srcCompat="@drawable/logout" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-93dp"
        android:layout_marginBottom="140dp"
        android:layout_toEndOf="@+id/imageView31"
        android:gravity="center_horizontal"
        android:text="@string/Logout"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/imageView32"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="96dp"
        app:srcCompat="@drawable/theme"
        android:tint="@color/grey"/>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="95dp"
        android:gravity="center_horizontal"
        android:text="@string/Change_Theme"
        android:textColor="@color/grey"
        android:textSize="20sp" />


</RelativeLayout>