<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:ignore="ContentDescription"
    >

    <Button
        android:id="@+id/button5"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginStart="210dp"
        android:layout_marginTop="246dp"
        android:background="@drawable/green"
        android:text="@string/Login"
        android:textColor="@color/main_text" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="207dp"
        android:background="@drawable/forgot_password"
        android:gravity="center"
        android:text="@string/Forgot_Password"
        android:textColor="@color/main_background" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="151dp"
        android:background="@drawable/green"
        android:gravity="center"
        android:text="@string/Register"
        android:textColor="@color/main_text" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="366dp"
        android:background="@drawable/forgot_password"
        android:text="@string/Password"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="428dp"
        android:background="@drawable/forgot_password"
        android:text="@string/Email"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/google_text"
        android:gravity="center"
        android:text="@string/google"
        android:textColor="@color/main_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="89dp"
        android:background="@drawable/facebook_text"
        android:gravity="center"
        android:text="@string/facebook"
        android:textColor="@color/main_text" />

    <Button
        android:id="@+id/button4"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="246dp"
        android:background="@drawable/green"
        android:text="@string/Login"
        android:textColor="@color/main_text" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="204dp"
        android:background="@drawable/forgot_password" />

    <!--<TextView-->
        <!--android:id="@+id/textView9"-->
        <!--android:layout_width="180dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_alignTop="@+id/textView8"-->
        <!--android:layout_alignEnd="@+id/textView"-->
        <!--android:layout_marginTop="0dp"-->
        <!--android:layout_marginEnd="2dp"-->
        <!--android:text="@string/Remember_Me"-->
        <!--android:textColor="@color/main_text"-->
        <!--android:textSize="22sp" />-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_alignEnd="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="1dp"
        app:srcCompat="@drawable/person" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/textView8"
        app:srcCompat="@drawable/dash" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_alignEnd="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="2dp"
        app:srcCompat="@drawable/password" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView13"
        android:layout_alignTop="@+id/imageView14"
        app:srcCompat="@drawable/dash" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-6dp"
        android:layout_marginBottom="101dp"
        android:layout_toStartOf="@+id/imageView13"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/imageView13"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="37dp"
        app:srcCompat="@drawable/google" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:background="@null"
        android:text="@string/Remember_Me"
        android:textColor="@color/main_text"
        android:textSize="22sp" />
</RelativeLayout>

