<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    >


    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="334dp"
        android:layout_marginTop="6dp"
        app:srcCompat="@drawable/side" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/main_background"
        android:text="@string/Heading"
        android:gravity="center"
        android:textColor="@color/main_text"  />

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="12dp"
        app:srcCompat="@mipmap/first_launcher"
        android:background="@drawable/img" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="96dp"
        android:background="@color/grey"
        android:gravity="center_horizontal"
        android:text="@string/Home"
        android:textColor="@color/figma_screen"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignTop="@+id/textView13"
        android:layout_alignParentStart="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="3dp"
        android:tint="@color/figma_screen"
        app:srcCompat="@drawable/home" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-93dp"
        android:layout_marginTop="155dp"
        android:layout_toEndOf="@+id/imageView39"
        android:gravity="center_horizontal"
        android:text="@string/Category"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/imageView40"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="155dp"
        android:tint="@color/grey"
        app:srcCompat="@drawable/category" />


    <ImageView
        android:id="@+id/imageView42"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/imageView41"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="199dp"
        android:tint="@color/grey"
        app:srcCompat="@drawable/heart" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/imageView42"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-3dp"
        android:gravity="center_horizontal"
        android:text="@string/Favourite"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignEnd="@+id/imageView42"
        android:layout_alignBottom="@+id/textView16"
        android:layout_marginEnd="0dp"
        android:tint="@color/grey"
        app:srcCompat="@drawable/bookmark" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="284dp"
        android:gravity="center_horizontal"
        android:text="@string/My_Order"
        android:textColor="@color/grey"
        android:textSize="20sp" />


    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/imageView40"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="233dp"
        android:tint="@color/grey"
        app:srcCompat="@drawable/setting" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="227dp"
        android:gravity="center_horizontal"
        android:text="@string/Settings"
        android:textColor="@color/grey"
        android:textSize="20sp" />


    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/imageView40"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="180dp"
        android:tint="@color/grey"
        app:srcCompat="@drawable/logout" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-93dp"
        android:layout_marginBottom="177dp"
        android:layout_toEndOf="@+id/imageView39"
        android:gravity="center_horizontal"
        android:text="@string/Logout"
        android:textColor="@color/grey"
        android:textSize="20sp" />


    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/imageView40"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="125dp"
        android:tint="@color/grey"
        app:srcCompat="@drawable/theme" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="125dp"
        android:gravity="center_horizontal"
        android:text="@string/Change_Theme"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView22"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/side1" />

</RelativeLayout>