<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:ignore="ContentDescription">

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/google_text"
        android:gravity="center"
        android:text="@string/google"
        android:textColor="@color/main_text" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/facebook_text"
        android:gravity="center"
        android:text="@string/facebook"
        android:textColor="@color/main_text" />

    <!--<TextView-->
        <!--android:id="@+id/textView3"-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="25dp"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginStart="55dp"-->
        <!--android:layout_marginBottom="199dp"-->
        <!--android:text="@string/Have_Account"-->
        <!--android:gravity="center"-->
        <!--android:textColor="@color/main_text" />-->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="351dp"
        android:background="@drawable/forgot_password"
        android:gravity="center"
        android:text="@string/Email"
        android:textColor="@color/main_background" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="412dp"
        android:background="@drawable/forgot_password"
        android:gravity="center"
        android:text="@string/Last_Name"
        android:textColor="@color/main_background" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="475dp"
        android:background="@drawable/forgot_password"
        android:gravity="center"
        android:text="@string/Full_Name"
        android:textColor="@color/main_background" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="291dp"
        android:background="@drawable/forgot_password"
        android:gravity="center"
        android:text="@string/Password"
        android:textColor="@color/main_background" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="233dp"
        android:background="@drawable/forgot_password"
        android:gravity="center"
        android:text="@string/Forgot_Password"
        android:textColor="@color/main_background" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="121dp"
        android:layout_toEndOf="@+id/imageView25"
        android:background="@drawable/green"
        android:text="@string/Submit"
        android:textColor="@color/main_text" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="57dp"
        android:layout_marginBottom="4dp"
        app:srcCompat="@drawable/person" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_alignStart="@+id/imageView18"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="4dp"
        app:srcCompat="@drawable/person" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_alignStart="@+id/imageView18"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="119dp"
        app:srcCompat="@drawable/email" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_alignStart="@+id/imageView18"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="238dp"
        app:srcCompat="@drawable/password" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_alignStart="@+id/imageView18"
        android:layout_alignBottom="@+id/textView8"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="65dp"
        app:srcCompat="@drawable/password" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView18"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/imageView23"
        app:srcCompat="@drawable/dash" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView19"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@+id/imageView18"
        app:srcCompat="@drawable/dash" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView20"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/imageView23"
        app:srcCompat="@drawable/dash" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView21"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/imageView18"
        app:srcCompat="@drawable/dash" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView23"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/imageView23"
        app:srcCompat="@drawable/dash" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginEnd="-10dp"
        android:layout_marginBottom="7dp"
        android:layout_toStartOf="@+id/imageView24"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-19dp"
        android:layout_marginBottom="15dp"
        android:layout_toStartOf="@+id/imageView24"
        app:srcCompat="@drawable/google" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="179dp"
        android:background="@null"
        android:gravity="center"
        android:text="@string/Have_Account"
        android:textColor="@color/main_text" />

</RelativeLayout>
